Project/Phase2/test_ex/test4.out
Error type 6 at line 4: left side in assignment is rvalue
