Project/Phase2/test_ex/test4.spl
int main()
{
    int x = 10;
    (x + 1) = 20;
    return 0;
}

